--- a/src/app/shared/dashboard-intro-card/dashboard-intro-card.component.html
+++ b/src/app/shared/dashboard-intro-card/dashboard-intro-card.component.html
@@ -1,5 +1,5 @@
 <div
-    class="w-full max-w-full  bg-white border border-gray-200 rounded-lg shadow-md sm:p-8 dark:bg-gray-800 dark:border-gray-700 ">
+    class="w-full max-w-full h-full  bg-white border border-gray-200 rounded-lg shadow-md sm:p-8 dark:bg-gray-800 dark:border-gray-700 ">
     <section class="bg-white dark:bg-gray-900">
         <div class=" mx-auto max-w-screen-xl text-center p-4">
 
