Add analytics page

--- a/src/app/core/layout/pages/analytics/analytics.component.html
+++ b/src/app/core/layout/pages/analytics/analytics.component.html
@@ -1,1 +1,12 @@
-<p>analytics works!</p>
+<app-navigation></app-navigation>
+<div class="antialiased md:ml-60">
+    <main class="flex flex-col p-4 md:mx-[35px] h-auto pt-20">
+        <div class="grid  gap-4 mt-5 ">
+            <app-report-line-chart>
+            </app-report-line-chart>
+            <app-annual-report-line-chart>
+            </app-annual-report-line-chart>
+        </div>
+    </main>
+</div>
+<app-ai></app-ai>
