--- a/src/app/core/layout/pages/content/content.component.css
+++ b/src/app/core/layout/pages/content/content.component.css
@@ -126,3 +126,13 @@
   z-index: 10 !important; /* Adjust as needed */
 }
 
+.delete-btn {
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.collage-wrapper:hover .delete-btn,
+.img-wrapper:hover .delete-btn {
+  opacity: 1;
+}
+
